chore: set angular base style integration from core

--- a/packages/angular/src/app/app.component.html
+++ b/packages/angular/src/app/app.component.html
@@ -1,2 +1,4 @@
 <!-- TODO: remove test app when storybook arrives -->
-<h1>Test</h1>
+<rte-button label="Click me" type="primary" size="m"/>
+<br><br>
+<rte-button label="You can't click me" type="primary" size="m" [disabled]="true"/>
