--- a/packages/core/tokens/_typography.scss
+++ b/packages/core/tokens/_typography.scss
@@ -42,73 +42,73 @@ $heading-s-semibold-line_height: $line_height-2xl;
 $heading-s-semibold-letter_spacing: $letter_spacing-s;
 $heading-xs-semibold-family: $family-nunito;
 $heading-xs-semibold-weight: $weight-semibold;
-$heading-xs-semibold-size: $font_size-l;
-$heading-xs-semibold-line_height: $line_height-l;
+$heading-xs-semibold-size: $font_size-xl;
+$heading-xs-semibold-line_height: $line_height-xl;
 $heading-xs-semibold-letter_spacing: $letter_spacing-s;
 $heading-2xs-semibold-family: $family-nunito;
 $heading-2xs-semibold-weight: $weight-semibold;
-$heading-2xs-semibold-size: $font_size-m;
-$heading-2xs-semibold-line_height: $line_height-m;
+$heading-2xs-semibold-size: $font_size-l;
+$heading-2xs-semibold-line_height: $line_height-l;
 $heading-2xs-semibold-letter_spacing: $letter_spacing-none;
 $text-xl-regular-family: $family-arial;
 $text-xl-regular-weight: $weight-regular;
 $text-xl-regular-size: $font_size-2xl;
 $text-xl-regular-line_height: $line_height-2xl;
 $text-xl-regular-letter_spacing: $letter_spacing-none;
-$text-xl-semibold-family: $family-arial;
-$text-xl-semibold-weight: $weight-semibold;
-$text-xl-semibold-size: $font_size-2xl;
-$text-xl-semibold-line_height: $line_height-2xl;
-$text-xl-semibold-letter_spacing: $letter_spacing-none;
+$text-xl-bold-family: $family-arial;
+$text-xl-bold-weight: $weight-bold;
+$text-xl-bold-size: $font_size-2xl;
+$text-xl-bold-line_height: $line_height-2xl;
+$text-xl-bold-letter_spacing: $letter_spacing-none;
 $text-l-regular-family: $family-arial;
 $text-l-regular-weight: $weight-regular;
-$text-l-regular-size: $font_size-l;
-$text-l-regular-line_height: $line_height-l;
+$text-l-regular-size: $font_size-xl;
+$text-l-regular-line_height: $line_height-xl;
 $text-l-regular-letter_spacing: $letter_spacing-none;
-$text-l-semibold-family: $family-arial;
-$text-l-semibold-weight: $weight-semibold;
-$text-l-semibold-size: $font_size-l;
-$text-l-semibold-line_height: $line_height-l;
-$text-l-semibold-letter_spacing: $letter_spacing-none;
+$text-l-bold-family: $family-arial;
+$text-l-bold-weight: $weight-bold;
+$text-l-bold-size: $font_size-xl;
+$text-l-bold-line_height: $line_height-xl;
+$text-l-bold-letter_spacing: $letter_spacing-none;
 $text-m-regular-family: $family-arial;
 $text-m-regular-weight: $weight-regular;
-$text-m-regular-size: $font_size-m;
-$text-m-regular-line_height: $line_height-m;
+$text-m-regular-size: $font_size-l;
+$text-m-regular-line_height: $line_height-l;
 $text-m-regular-letter_spacing: $letter_spacing-none;
-$text-m-semibold-family: $family-arial;
-$text-m-semibold-weight: $weight-semibold;
-$text-m-semibold-size: $font_size-m;
-$text-m-semibold-line_height: $line_height-m;
-$text-m-semibold-letter_spacing: $letter_spacing-none;
+$text-m-bold-family: $family-arial;
+$text-m-bold-weight: $weight-bold;
+$text-m-bold-size: $font_size-l;
+$text-m-bold-line_height: $line_height-l;
+$text-m-bold-letter_spacing: $letter_spacing-none;
 $text-s-regular-family: $family-arial;
 $text-s-regular-weight: $weight-regular;
-$text-s-regular-size: $font_size-s;
-$text-s-regular-line_height: $line_height-s;
+$text-s-regular-size: $font_size-m;
+$text-s-regular-line_height: $line_height-m;
 $text-s-regular-letter_spacing: $letter_spacing-none;
-$text-s-semibold-family: $family-arial;
-$text-s-semibold-weight: $weight-semibold;
-$text-s-semibold-size: $font_size-s;
-$text-s-semibold-line_height: $line_height-s;
-$text-s-semibold-letter_spacing: $letter_spacing-none;
+$text-s-bold-family: $family-arial;
+$text-s-bold-weight: $weight-bold;
+$text-s-bold-size: $font_size-m;
+$text-s-bold-line_height: $line_height-m;
+$text-s-bold-letter_spacing: $letter_spacing-none;
 $text-xs-regular-family: $family-arial;
 $text-xs-regular-weight: $weight-regular;
-$text-xs-regular-size: $font_size-xs;
-$text-xs-regular-line_height: $line_height-xs;
+$text-xs-regular-size: $font_size-s;
+$text-xs-regular-line_height: $line_height-s;
 $text-xs-regular-letter_spacing: $letter_spacing-none;
-$text-xs-semibold-family: $family-arial;
-$text-xs-semibold-weight: $weight-semibold;
-$text-xs-semibold-size: $font_size-xs;
-$text-xs-semibold-line_height: $line_height-xs;
-$text-xs-semibold-letter_spacing: $letter_spacing-none;
+$text-xs-bold-family: $family-arial;
+$text-xs-bold-weight: $weight-bold;
+$text-xs-bold-size: $font_size-s;
+$text-xs-bold-line_height: $line_height-s;
+$text-xs-bold-letter_spacing: $letter_spacing-none;
 $button-s-semibold-family: $family-nunito;
 $button-s-semibold-weight: $weight-semibold;
-$button-s-semibold-size: $font_size-m;
-$button-s-semibold-line_height: $line_height-m;
+$button-s-semibold-size: $font_size-l;
+$button-s-semibold-line_height: $line_height-l;
 $button-s-semibold-letter_spacing: $letter_spacing-s;
 $button-m-semibold-family: $family-nunito;
 $button-m-semibold-weight: $weight-semibold;
-$button-m-semibold-size: $font_size-l;
-$button-m-semibold-line_height: $line_height-l;
+$button-m-semibold-size: $font_size-xl;
+$button-m-semibold-line_height: $line_height-xl;
 $button-m-semibold-letter_spacing: $letter_spacing-s;
 $button-l-semibold-family: $family-nunito;
 $button-l-semibold-weight: $weight-semibold;
@@ -122,7 +122,7 @@ $button-l-semibold-letter_spacing: $letter_spacing-s;
     font-size: $button-s-semibold-size;
     font-style: normal;
     letter-spacing: $button-s-semibold-letter_spacing;
-    font-weight: 600;
+    font-weight: $button-s-semibold-weight;
     line-height: $button-s-semibold-line_height;
 }
 
@@ -132,7 +132,7 @@ $button-l-semibold-letter_spacing: $letter_spacing-s;
     font-size: $button-m-semibold-size;
     font-style: normal;
     letter-spacing: $button-m-semibold-letter_spacing;
-    font-weight: 600;
+    font-weight: $button-m-semibold-weight;
     line-height: $button-m-semibold-line_height;
 }
 
@@ -142,6 +142,6 @@ $button-l-semibold-letter_spacing: $letter_spacing-s;
     font-size: $button-l-semibold-size;
     font-style: normal;
     letter-spacing: $button-l-semibold-letter_spacing;
-    font-weight: 600;
+    font-weight: $button-l-semibold-weight;
     line-height: $button-l-semibold-line_height;
 }
