--- a/packages/angular/src/components/button/button.component.html
+++ b/packages/angular/src/components/button/button.component.html
@@ -1,3 +1,3 @@
-<button class="rte-button" [disabled]="disabled">
+<button class="rte-button {{ type }} {{ size }}" [disabled]="disabled">
     {{ label }}
 </button>
