--- a/packages/angular/src/components/button/button.component.html
+++ b/packages/angular/src/components/button/button.component.html
@@ -1,3 +1,7 @@
-<button class="rte-button {{ type }} {{ size }}" [disabled]="disabled">
+<button
+    class="rte-button {{ type }} size-{{ size }}"
+    [disabled]="disabled"
+    (click)="click.emit()"
+>
     {{ label }}
 </button>
