feat: add class concatenation function with clsx

--- a/packages/core/tokens/primitives/_typography.scss
+++ b/packages/core/tokens/primitives/_typography.scss
@@ -1,5 +1,33 @@
 @use 'colors' as *;
 
+@font-face {
+  font-family: "Nunito";
+  src: url("../../assets/fonts/Nunito-Light.woff2") format("woff2");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Nunito";
+  src: url("../../assets/fonts/Nunito-Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Nunito";
+  src: url("../../assets/fonts/Nunito-SemiBold.woff2") format("woff2");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Nunito";
+  src: url("../../assets/fonts/Nunito-Bold.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+
 $weight-light: 300;
 $weight-regular: 400;
 $weight-semibold: 600;
