refactor: set new signal input & output syntax for Angular 17

--- a/packages/angular/src/components/button/button.component.html
+++ b/packages/angular/src/components/button/button.component.html
@@ -1,7 +1,7 @@
 <button
-    class="rte-button {{ type }} size-{{ size }}"
-    [disabled]="disabled"
+    class="rte-button {{ type() }} size-{{ size() }}"
+    [disabled]="disabled()"
     (click)="click.emit()"
 >
-    {{ label }}
+    {{ label() }}
 </button>
