fix: add correct spacings to button

--- a/packages/angular/src/components/button/button.component.html
+++ b/packages/angular/src/components/button/button.component.html
@@ -3,5 +3,5 @@
     [disabled]="disabled()"
     (click)="onClick($event)"
 >
-    {{ label() }}
+    <span class="rte-button-label">{{ label() }}</span>
 </button>
