--- a/packages/angular/src/components/button/button.component.scss
+++ b/packages/angular/src/components/button/button.component.scss
@@ -11,14 +11,22 @@
         @include typography-button-s;
         height: 24px;
         border-radius: $radius-s;
-        padding: $positive-spacing_050;
+        padding: $positive-spacing_050 $positive-spacing_100;
+
+        .rte-button-label {
+            margin: 0 $positive-spacing_050;
+        }
     }
 
     &.size-m {
         @include typography-button-m;
         height: 32px;
         border-radius: $radius-s;
-        padding: $positive-spacing_050 $positive-spacing_100;
+        padding: $positive-spacing_050 $positive-spacing_150;
+
+        .rte-button-label {
+            margin: 0 $positive-spacing_075;
+        }
     }
 
     &.size-l {
@@ -26,6 +34,10 @@
         height: 40px;
         border-radius: $radius-m;
         padding: $positive-spacing_050 $positive-spacing_200;
+
+        .rte-button-label {
+            margin: 0 $positive-spacing_100;
+        }
     }
 
     &.filled {
