feat: add theme-selectors for theming purposes

--- a/packages/angular/.storybook/preview.scss
+++ b/packages/angular/.storybook/preview.scss
@@ -1,5 +1,3 @@
 @use "@design-system-rte/core/tokens/_mixins.scss" as *;
 
-:root {
-  @include apply-theme('violet', 'dark');
-}
+@include theme-selector();
