--- a/packages/core/tokens/_mixins.scss
+++ b/packages/core/tokens/_mixins.scss
@@ -15,8 +15,21 @@ $themes: (
 }
 
 @mixin apply-theme($targetTheme: bleu_iceberg, $mode: light) {
+
+    @debug "DEBUGGER $targetTheme: #{$targetTheme}";
     
     $targetTheme: map.get($themes, $targetTheme, $mode);
 
     @include extract-custom-properties-from-theme($targetTheme);
+}
+
+@mixin theme-selector($targetTheme: violet, $mode: light) {
+    $targetTheme: map.get($themes, $targetTheme, $mode);
+
+    // @debug "DEBUGGER $targetTheme: #{$targetTheme}";
+
+
+    [data-theme="#{$targetTheme}"][data-mode="#{$mode}"] {
+        @include extract-custom-properties-from-theme($targetTheme);
+    }
 }
