feat: rename type props to variant

--- a/packages/angular/src/components/button/button.component.html
+++ b/packages/angular/src/components/button/button.component.html
@@ -1,5 +1,5 @@
 <button
-    class="rte-button {{ type() }} size-{{ size() }}"
+    class="rte-button {{ variant() }} size-{{ size() }}"
     [disabled]="disabled()"
     (click)="onClick($event)"
 >
