--- a/packages/core/tokens/primitives/_typography.scss
+++ b/packages/core/tokens/primitives/_typography.scss
@@ -28,38 +28,38 @@
   font-style: normal;
 }
 
-$weight-light: 300;
-$weight-regular: 400;
-$weight-semibold: 600;
-$weight-bold: 700;
-$family-nunito: "Nunito";
-$family-arial: "Arial";
-$font_size-s: 10px;
-$font_size-m: 12px;
-$font_size-l: 14px;
-$font_size-xl: 16px;
-$font_size-2xl: 20px;
-$font_size-3xl: 24px;
-$font_size-4xl: 28px;
-$font_size-5xl: 32px;
-$font_size-6xl: 40px;
-$font_size-7xl: 48px;
-$font_size-8xl: 56px;
-$font_size-9xl: 68px;
-$font_size-10xl: 80px;
-$line_height-s: 14px;
-$line_height-m: 16px;
-$line_height-l: 20px;
-$line_height-xl: 24px;
-$line_height-2xl: 28px;
-$line_height-3xl: 32px;
-$line_height-4xl: 36px;
-$line_height-5xl: 40px;
-$line_height-6xl: 48px;
-$line_height-7xl: 56px;
-$line_height-8xl: 64px;
-$line_height-9xl: 80px;
-$line_height-10xl: 92px;
-$letter_spacing-none: 0px;
-$letter_spacing-s: -0.5px;
-$letter_spacing-xs: -1px;
+$font-family-nunito: "Nunito";
+$font-family-arial: "Arial";
+$font-weight-light: 300;
+$font-weight-regular: 400;
+$font-weight-semibold: 600;
+$font-weight-bold: 700;
+$font-size-s: 10px;
+$font-size-m: 12px;
+$font-size-l: 14px;
+$font-size-xl: 16px;
+$font-size-2xl: 20px;
+$font-size-3xl: 24px;
+$font-size-4xl: 28px;
+$font-size-5xl: 32px;
+$font-size-6xl: 40px;
+$font-size-7xl: 48px;
+$font-size-8xl: 56px;
+$font-size-9xl: 68px;
+$font-size-10xl: 80px;
+$line-height-s: 14px;
+$line-height-m: 16px;
+$line-height-l: 20px;
+$line-height-xl: 24px;
+$line-height-2xl: 28px;
+$line-height-3xl: 32px;
+$line-height-4xl: 36px;
+$line-height-5xl: 40px;
+$line-height-6xl: 48px;
+$line-height-7xl: 56px;
+$line-height-8xl: 64px;
+$line-height-9xl: 80px;
+$line-height-10xl: 92px;
+$letter-spacing-none: 0px;
+$letter-spacing-s: -0.5px;
+$letter-spacing-xs: -1px;
