--- a/packages/angular/src/components/button/button.component.scss
+++ b/packages/angular/src/components/button/button.component.scss
@@ -41,22 +41,22 @@
     }
 
     &.filled {
-        border: var(--border-brand_default);
-        color: var(--content-primary_inverse);
-        background: var(--background-brand_default);
+        border: var(--border-brand-default);
+        color: var(--content-primary-inverse);
+        background: var(--background-brand-default);
 
         &:hover {
-            background: var(--background-brand_hover);
-            border: var(--background-brand_hover);
+            background: var(--background-brand-hover);
+            border: var(--background-brand-hover);
         }
 
         &:active {
-            background: var(--background-brand_pressed);
+            background: var(--background-brand-pressed);
         }
 
         &:focus {
             // TODO: find a solution with a new focus wrapper component
-            outline: 2px solid var(--border-brand_focused);
+            outline: 2px solid var(--border-brand-focused);
         }
 
         &:disabled {
@@ -70,21 +70,21 @@
 
     &.outlined {
         background: var(--background-default);
-        border: solid 1px var(--border-brand_default);
-        color: var(--content-brand_default);
+        border: solid 1px var(--border-brand-default);
+        color: var(--content-brand-default);
 
         &:hover {
-            background: var(--background-brand_inverse_hover);
-            border: solid 1px var(--border-brand_default);
+            background: var(--background-brand-inverse-hover);
+            border: solid 1px var(--border-brand-default);
         }
 
         &:active {
-            border: var(--background-brand_inverse);
-            background: var(--background-brand_inverse_pressed);
+            border: var(--background-brand-inverse);
+            background: var(--background-brand-inverse-pressed);
         }
 
         &:focus {
-            outline: 2px solid var(--border-brand_focused);
+            outline: 2px solid var(--border-brand-focused);
         }
 
         &:disabled {
@@ -98,18 +98,18 @@
     &.text {
         background: transparent;
         border: none;
-        color: var(--content-brand_default);
+        color: var(--content-brand-default);
 
         &:hover {
-            background: var(--background-brand_inverse_hover);
+            background: var(--background-brand-inverse-hover);
         }
 
         &:active {
-            background: var(--background-brand_inverse_pressed);
+            background: var(--background-brand-inverse-pressed);
         }
 
         &:focus {
-            outline: 2px solid var(--border-brand_focused);
+            outline: 2px solid var(--border-brand-focused);
         }
 
         &:disabled {
@@ -122,18 +122,18 @@
     &.transparent {
         background: transparent;
         border: none;
-        color: var(--content-brand_default);
+        color: var(--content-brand-default);
 
         &:hover {
-            color: var(--content-brand_hover);
+            color: var(--content-brand-hover);
         }
 
         &:active {
-            color: var(--content-brand_pressed);
+            color: var(--content-brand-pressed);
         }
 
         &:focus {
-            outline: 2px solid var(--border-brand_focused);
+            outline: 2px solid var(--border-brand-focused);
         }
 
         &:disabled {
@@ -144,21 +144,21 @@
     };
     
     &.danger {
-        background: var(--background-danger_default);
+        background: var(--background-danger-default);
         border: none;
-        color: var(--content-primary_inverse);
+        color: var(--content-primary-inverse);
         border-radius: $radius-m;
 
         &:hover {
-            background: var(--background-danger_hover);
+            background: var(--background-danger-hover);
         }
 
         &:active {
-            background: var(--background-danger_pressed);
+            background: var(--background-danger-pressed);
         }
 
         &:focus {
-            outline: 2px solid var(--border-brand_focused);
+            outline: 2px solid var(--border-brand-focused);
         }
 
         &:disabled {
