--- a/packages/core/tokens/_radius.scss
+++ b/packages/core/tokens/_radius.scss
@@ -1,11 +1,12 @@
+$radius-none: 0px;
 $radius-xs: 2px;
 $radius-s: 4px;
 $radius-m: 8px;
-$radius-l: 16px;
+$radius-l: 12px;
+$radius-xl: 16px;
 $radius-2xl: 32px;
 $radius-pill: 999px;
 $width-xs: 1px;
-$width-s: 1.5px;
-$width-m: 2px;
-$width-l: 4px;
-$width-xl: 8px;
+$width-s: 2px;
+$width-m: 4px;
+$width-l: 8px;
