--- a/packages/core/tokens/_typography.scss
+++ b/packages/core/tokens/_typography.scss
@@ -1,147 +1,149 @@
 @use 'primitives/typography' as *;
 
-$heading-5xl-semibold-family: $family-nunito;
-$heading-5xl-semibold-weight: $weight-semibold;
-$heading-5xl-semibold-size: $font_size-10xl;
-$heading-5xl-semibold-line_height: $line_height-10xl;
-$heading-5xl-semibold-letter_spacing: $letter_spacing-xs;
-$heading-4xl-semibold-family: $family-nunito;
-$heading-4xl-semibold-weight: $weight-semibold;
-$heading-4xl-semibold-size: $font_size-9xl;
-$heading-4xl-semibold-line_height: $line_height-9xl;
-$heading-4xl-semibold-letter_spacing: $letter_spacing-xs;
-$heading-3xl-semibold-family: $family-nunito;
-$heading-3xl-semibold-weight: $weight-semibold;
-$heading-3xl-semibold-size: $font_size-8xl;
-$heading-3xl-semibold-line_height: $line_height-8xl;
-$heading-3xl-semibold-letter_spacing: $letter_spacing-xs;
-$heading-2xl-semibold-family: $family-nunito;
-$heading-2xl-semibold-weight: $weight-semibold;
-$heading-2xl-semibold-size: $font_size-7xl;
-$heading-2xl-semibold-line_height: $line_height-7xl;
-$heading-2xl-semibold-letter_spacing: $letter_spacing-xs;
-$heading-xl-semibold-family: $family-nunito;
-$heading-xl-semibold-weight: $weight-semibold;
-$heading-xl-semibold-size: $font_size-6xl;
-$heading-xl-semibold-line_height: $line_height-6xl;
-$heading-xl-semibold-letter_spacing: $letter_spacing-xs;
-$heading-l-semibold-family: $family-nunito;
-$heading-l-semibold-weight: $weight-semibold;
-$heading-l-semibold-size: $font_size-5xl;
-$heading-l-semibold-line_height: $line_height-5xl;
-$heading-l-semibold-letter_spacing: $letter_spacing-xs;
-$heading-m-semibold-family: $family-nunito;
-$heading-m-semibold-weight: $weight-semibold;
-$heading-m-semibold-size: $font_size-3xl;
-$heading-m-semibold-line_height: $line_height-3xl;
-$heading-m-semibold-letter_spacing: $letter_spacing-s;
-$heading-s-semibold-family: $family-nunito;
-$heading-s-semibold-weight: $weight-semibold;
-$heading-s-semibold-size: $font_size-2xl;
-$heading-s-semibold-line_height: $line_height-2xl;
-$heading-s-semibold-letter_spacing: $letter_spacing-s;
-$heading-xs-semibold-family: $family-nunito;
-$heading-xs-semibold-weight: $weight-semibold;
-$heading-xs-semibold-size: $font_size-xl;
-$heading-xs-semibold-line_height: $line_height-xl;
-$heading-xs-semibold-letter_spacing: $letter_spacing-s;
-$heading-2xs-semibold-family: $family-nunito;
-$heading-2xs-semibold-weight: $weight-semibold;
-$heading-2xs-semibold-size: $font_size-l;
-$heading-2xs-semibold-line_height: $line_height-l;
-$heading-2xs-semibold-letter_spacing: $letter_spacing-none;
-$text-xl-regular-family: $family-arial;
-$text-xl-regular-weight: $weight-regular;
-$text-xl-regular-size: $font_size-2xl;
-$text-xl-regular-line_height: $line_height-2xl;
-$text-xl-regular-letter_spacing: $letter_spacing-none;
-$text-xl-bold-family: $family-arial;
-$text-xl-bold-weight: $weight-bold;
-$text-xl-bold-size: $font_size-2xl;
-$text-xl-bold-line_height: $line_height-2xl;
-$text-xl-bold-letter_spacing: $letter_spacing-none;
-$text-l-regular-family: $family-arial;
-$text-l-regular-weight: $weight-regular;
-$text-l-regular-size: $font_size-xl;
-$text-l-regular-line_height: $line_height-xl;
-$text-l-regular-letter_spacing: $letter_spacing-none;
-$text-l-bold-family: $family-arial;
-$text-l-bold-weight: $weight-bold;
-$text-l-bold-size: $font_size-xl;
-$text-l-bold-line_height: $line_height-xl;
-$text-l-bold-letter_spacing: $letter_spacing-none;
-$text-m-regular-family: $family-arial;
-$text-m-regular-weight: $weight-regular;
-$text-m-regular-size: $font_size-l;
-$text-m-regular-line_height: $line_height-l;
-$text-m-regular-letter_spacing: $letter_spacing-none;
-$text-m-bold-family: $family-arial;
-$text-m-bold-weight: $weight-bold;
-$text-m-bold-size: $font_size-l;
-$text-m-bold-line_height: $line_height-l;
-$text-m-bold-letter_spacing: $letter_spacing-none;
-$text-s-regular-family: $family-arial;
-$text-s-regular-weight: $weight-regular;
-$text-s-regular-size: $font_size-m;
-$text-s-regular-line_height: $line_height-m;
-$text-s-regular-letter_spacing: $letter_spacing-none;
-$text-s-bold-family: $family-arial;
-$text-s-bold-weight: $weight-bold;
-$text-s-bold-size: $font_size-m;
-$text-s-bold-line_height: $line_height-m;
-$text-s-bold-letter_spacing: $letter_spacing-none;
-$text-xs-regular-family: $family-arial;
-$text-xs-regular-weight: $weight-regular;
-$text-xs-regular-size: $font_size-s;
-$text-xs-regular-line_height: $line_height-s;
-$text-xs-regular-letter_spacing: $letter_spacing-none;
-$text-xs-bold-family: $family-arial;
-$text-xs-bold-weight: $weight-bold;
-$text-xs-bold-size: $font_size-s;
-$text-xs-bold-line_height: $line_height-s;
-$text-xs-bold-letter_spacing: $letter_spacing-none;
-$button-s-semibold-family: $family-nunito;
-$button-s-semibold-weight: $weight-semibold;
-$button-s-semibold-size: $font_size-l;
-$button-s-semibold-line_height: $line_height-l;
-$button-s-semibold-letter_spacing: $letter_spacing-s;
-$button-m-semibold-family: $family-nunito;
-$button-m-semibold-weight: $weight-semibold;
-$button-m-semibold-size: $font_size-xl;
-$button-m-semibold-line_height: $line_height-xl;
-$button-m-semibold-letter_spacing: $letter_spacing-s;
-$button-l-semibold-family: $family-nunito;
-$button-l-semibold-weight: $weight-semibold;
-$button-l-semibold-size: $font_size-2xl;
-$button-l-semibold-line_height: $line_height-2xl;
-$button-l-semibold-letter_spacing: $letter_spacing-s;
+$heading-5xl-semibold-font-family: $font-family-nunito;
+$heading-5xl-semibold-font-weight: $font-weight-semibold;
+$heading-5xl-semibold-font-size: $font-size-10xl;
+$heading-5xl-semibold-line-height: $line-height-10xl;
+$heading-5xl-semibold-letter-spacing: $letter-spacing-xs;
+$heading-4xl-semibold-font-family: $font-family-nunito;
+$heading-4xl-semibold-font-weight: $font-weight-semibold;
+$heading-4xl-semibold-font-size: $font-size-9xl;
+$heading-4xl-semibold-line-height: $line-height-9xl;
+$heading-4xl-semibold-letter-spacing: $letter-spacing-xs;
+$heading-3xl-semibold-font-family: $font-family-nunito;
+$heading-3xl-semibold-font-weight: $font-weight-semibold;
+$heading-3xl-semibold-font-size: $font-size-8xl;
+$heading-3xl-semibold-line-height: $line-height-8xl;
+$heading-3xl-semibold-letter-spacing: $letter-spacing-xs;
+$heading-2xl-semibold-font-family: $font-family-nunito;
+$heading-2xl-semibold-font-weight: $font-weight-semibold;
+$heading-2xl-semibold-font-size: $font-size-7xl;
+$heading-2xl-semibold-line-height: $line-height-7xl;
+$heading-2xl-semibold-letter-spacing: $letter-spacing-xs;
+$heading-xl-semibold-font-family: $font-family-nunito;
+$heading-xl-semibold-font-weight: $font-weight-semibold;
+$heading-xl-semibold-font-size: $font-size-6xl;
+$heading-xl-semibold-line-height: $line-height-6xl;
+$heading-xl-semibold-letter-spacing: $letter-spacing-xs;
+$heading-l-semibold-font-family: $font-family-nunito;
+$heading-l-semibold-font-weight: $font-weight-semibold;
+$heading-l-semibold-font-size: $font-size-5xl;
+$heading-l-semibold-line-height: $line-height-5xl;
+$heading-l-semibold-letter-spacing: $letter-spacing-xs;
+$heading-m-semibold-font-family: $font-family-nunito;
+$heading-m-semibold-font-weight: $font-weight-semibold;
+$heading-m-semibold-font-size: $font-size-3xl;
+$heading-m-semibold-line-height: $line-height-3xl;
+$heading-m-semibold-letter-spacing: $letter-spacing-s;
+$heading-s-semibold-font-family: $font-family-nunito;
+$heading-s-semibold-font-weight: $font-weight-semibold;
+$heading-s-semibold-font-size: $font-size-2xl;
+$heading-s-semibold-line-height: $line-height-2xl;
+$heading-s-semibold-letter-spacing: $letter-spacing-s;
+$heading-xs-semibold-font-family: $font-family-nunito;
+$heading-xs-semibold-font-weight: $font-weight-semibold;
+$heading-xs-semibold-font-size: $font-size-xl;
+$heading-xs-semibold-line-height: $line-height-xl;
+$heading-xs-semibold-letter-spacing: $letter-spacing-s;
+$heading-2xs-semibold-font-family: $font-family-nunito;
+$heading-2xs-semibold-font-weight: $font-weight-semibold;
+$heading-2xs-semibold-font-size: $font-size-l;
+$heading-2xs-semibold-line-height: $line-height-l;
+$heading-2xs-semibold-letter-spacing: $letter-spacing-none;
+$text-xl-regular-font-family: $font-family-arial;
+$text-xl-regular-font-weight: $font-weight-regular;
+$text-xl-regular-font-size: $font-size-2xl;
+$text-xl-regular-line-height: $line-height-2xl;
+$text-xl-regular-letter-spacing: $letter-spacing-none;
+$text-xl-bold-font-family: $font-family-arial;
+$text-xl-bold-font-weight: $font-weight-bold;
+$text-xl-bold-font-size: $font-size-2xl;
+$text-xl-bold-line-height: $line-height-2xl;
+$text-xl-bold-letter-spacing: $letter-spacing-none;
+$text-l-regular-font-family: $font-family-arial;
+$text-l-regular-font-weight: $font-weight-regular;
+$text-l-regular-font-size: $font-size-xl;
+$text-l-regular-line-height: $line-height-xl;
+$text-l-regular-letter-spacing: $letter-spacing-none;
+$text-l-bold-font-family: $font-family-arial;
+$text-l-bold-font-weight: $font-weight-bold;
+$text-l-bold-font-size: $font-size-xl;
+$text-l-bold-line-height: $line-height-xl;
+$text-l-bold-letter-spacing: $letter-spacing-none;
+$text-m-regular-font-family: $font-family-arial;
+$text-m-regular-font-weight: $font-weight-regular;
+$text-m-regular-font-size: $font-size-l;
+$text-m-regular-line-height: $line-height-l;
+$text-m-regular-letter-spacing: $letter-spacing-none;
+$text-m-bold-font-family: $font-family-arial;
+$text-m-bold-font-weight: $font-weight-bold;
+$text-m-bold-font-size: $font-size-l;
+$text-m-bold-line-height: $line-height-l;
+$text-m-bold-letter-spacing: $letter-spacing-none;
+$text-s-regular-font-family: $font-family-arial;
+$text-s-regular-font-weight: $font-weight-regular;
+$text-s-regular-font-size: $font-size-m;
+$text-s-regular-line-height: $line-height-m;
+$text-s-regular-letter-spacing: $letter-spacing-none;
+$text-s-bold-font-family: $font-family-arial;
+$text-s-bold-font-weight: $font-weight-bold;
+$text-s-bold-font-size: $font-size-m;
+$text-s-bold-line-height: $line-height-m;
+$text-s-bold-letter-spacing: $letter-spacing-none;
+$text-xs-regular-font-family: $font-family-arial;
+$text-xs-regular-font-weight: $font-weight-regular;
+$text-xs-regular-font-size: $font-size-s;
+$text-xs-regular-line-height: $line-height-s;
+$text-xs-regular-letter-spacing: $letter-spacing-none;
+$text-xs-bold-font-family: $font-family-arial;
+$text-xs-bold-font-weight: $font-weight-bold;
+$text-xs-bold-font-size: $font-size-s;
+$text-xs-bold-line-height: $line-height-s;
+$text-xs-bold-letter-spacing: $letter-spacing-none;
+$button-s-semibold-font-family: $font-family-nunito;
+$button-s-semibold-font-weight: $font-weight-semibold;
+$button-s-semibold-font-size: $font-size-l;
+$button-s-semibold-line-height: $line-height-l;
+$button-s-semibold-letter-spacing: $letter-spacing-s;
+$button-m-semibold-font-family: $font-family-nunito;
+$button-m-semibold-font-weight: $font-weight-semibold;
+$button-m-semibold-font-size: $font-size-xl;
+$button-m-semibold-line-height: $line-height-xl;
+$button-m-semibold-letter-spacing: $letter-spacing-s;
+$button-l-semibold-font-family: $font-family-nunito;
+$button-l-semibold-font-weight: $font-weight-semibold;
+$button-l-semibold-font-size: $font-size-2xl;
+$button-l-semibold-line-height: $line-height-2xl;
+$button-l-semibold-letter-spacing: $letter-spacing-s;
+
+@mixin typography-button {
+    font-feature-settings: 'liga' off, 'clig' off;
+    font-style: normal;
+}
 
 @mixin typography-button-s {
-    font-feature-settings: 'liga' off, 'clig' off;
-    font-family: $button-s-semibold-family;
-    font-size: $button-s-semibold-size;
-    font-style: normal;
-    letter-spacing: $button-s-semibold-letter_spacing;
-    font-weight: $button-s-semibold-weight;
-    line-height: $button-s-semibold-line_height;
+    @include typography-button;
+    font-family: $button-s-semibold-font-family;
+    font-size: $button-s-semibold-font-size;
+    letter-spacing: $button-s-semibold-letter-spacing;
+    font-weight: $button-s-semibold-font-weight;
+    line-height: $button-s-semibold-line-height;
 }
 
 @mixin typography-button-m {
-    font-feature-settings: 'liga' off, 'clig' off;
-    font-family: $button-m-semibold-family;
-    font-size: $button-m-semibold-size;
-    font-style: normal;
-    letter-spacing: $button-m-semibold-letter_spacing;
-    font-weight: $button-m-semibold-weight;
-    line-height: $button-m-semibold-line_height;
+    @include typography-button;
+    font-family: $button-m-semibold-font-family;
+    font-weight: $button-m-semibold-font-weight;
+    font-size: $button-m-semibold-font-size;
+    line-height: $button-m-semibold-line-height;
+    letter-spacing: $button-m-semibold-letter-spacing;
 }
 
 @mixin typography-button-l {
-    font-feature-settings: 'liga' off, 'clig' off;
-    font-family: $button-l-semibold-family;
-    font-size: $button-l-semibold-size;
-    font-style: normal;
-    letter-spacing: $button-l-semibold-letter_spacing;
-    font-weight: $button-l-semibold-weight;
-    line-height: $button-l-semibold-line_height;
+    @include typography-button;
+    font-family: $button-l-semibold-font-family;
+    font-weight: $button-l-semibold-font-weight;
+    font-size: $button-l-semibold-font-size;
+    line-height: $button-l-semibold-line-height;
+    letter-spacing: $button-l-semibold-letter-spacing;
 }
