--- a/packages/core/tokens/_layout.scss
+++ b/packages/core/tokens/_layout.scss
@@ -4,10 +4,10 @@ $breakpoints-s: 768px;
 $breakpoints-m: 1024px;
 $breakpoints-l: 1440px;
 $breakpoints-xl: 1768px;
-$column-number-xs: 1px;
-$column-number-s: 2px;
-$column-number-m: 6px;
-$column-number-l: 12px;
+$column-number-xs: 1;
+$column-number-s: 2;
+$column-number-m: 6;
+$column-number-l: 12;
 $panel-width-xs: 56px;
 $panel-width-s: 320px;
 $panel-width-m: 400px;
