fix: add padding value with breakpoints m

--- a/packages/react/src/components/grid/Grid.scss
+++ b/packages/react/src/components/grid/Grid.scss
@@ -14,6 +14,7 @@
     @media (min-width: $breakpoints-m) {
         grid-template-columns: repeat($column-number-l, 1fr);
         gap: $positive-spacing_200;
+        padding: 0 $positive-spacing_400;
     }
 
     &[data-gridtype='fixed-narrow'] {
