--- a/packages/core/components/grid/grid.scss
+++ b/packages/core/components/grid/grid.scss
@@ -25,3 +25,35 @@
         max-width: 1296px;
     }
 }
+
+.col {
+  grid-column: span 1;
+}
+
+@for $i from 1 through 12 {
+  .col-xxs-#{$i} {
+    grid-column: span #{$i};
+  }
+}
+
+@media (min-width: $breakpoints-xs) {
+  @for $i from 1 through 12 {
+    .col-xs-#{$i} {
+      grid-column: span #{$i};
+    }
+    .col-s-#{$i} {
+      grid-column: span #{$i};
+    }
+  }
+}
+
+@media (min-width: $breakpoints-m) {
+  @for $i from 1 through 12 {
+    .col-m-#{$i} {
+      grid-column: span #{$i};
+    }
+    .col-l-#{$i} {
+      grid-column: span #{$i};
+    }
+  }
+}
