fix: applied pr suggestion

--- a/packages/angular/src/components/link/link.component.html
+++ b/packages/angular/src/components/link/link.component.html
@@ -1,4 +1,4 @@
-<a class="rte-link subtle-{{ subtle() }}" href="{{ href() }}" role="link">
+<a class="rte-link" [ngClass]="{'subtle': subtle()}" href="{{ href() }}" role="link">
     <span class="rte-link-label">
         {{ label() }}
     </span>
