[WIP] feature: handle .scss files bundling

--- a/packages/react/src/components/button/Button.module.scss
+++ b/packages/react/src/components/button/Button.module.scss
@@ -1,4 +1,5 @@
 @use '@design-system-rte/core/tokens/main.scss' as *;
+// @use '../../../node_modules/@design-system-rte/core/tokens/main.scss' as *;
 
 .button {
     align-items: center;
