fix: applied comments

--- a/packages/react/src/components/radioButton/RadioButton.module.scss
+++ b/packages/react/src/components/radioButton/RadioButton.module.scss
@@ -17,7 +17,7 @@
     align-items: center;
     border-radius: $radius-pill;
     border: $width-xs solid var(--content-tertiary);
-    background: var(--background-defaut);
+    background: var(--background-default);
     position: relative;
     cursor: pointer;
     transition: box-shadow 0.3s ease-in-out;
