--- a/packages/react/src/components/radioButtonGroup/RadioButtonGroup.module.scss
+++ b/packages/react/src/components/radioButtonGroup/RadioButtonGroup.module.scss
@@ -13,6 +13,7 @@
         .groupTitle {
             @include typography-heading-s;
             align-self: stretch;
+            margin: $positive-spacing_0;
 
         }
 
@@ -20,12 +21,46 @@
             @include typography-text-m;
             color: var(--content-tertiary);
             align-self: stretch;
+            margin: $positive-spacing_0;
         }
 
         .errorMessage {
             @include typography-text-m-bold;
             color: var(--content-danger);
             align-self: stretch;
+            margin: $positive-spacing_0;
+            margin-top: $positive-spacing_050;
+        }
+
+        &[data-read-only='true'] {
+            .groupTitle {
+                color: var(--content-tertiary);
+            }
+
+            &[data-error='true'] {
+                .groupTitle {
+                    color: var(--content-danger);
+                }
+            }
+        }
+
+        &[data-disabled='true'] {
+
+            pointer-events: none;
+
+            .groupTitle {
+                color: var(--content-disabled);
+            }
+
+            .groupHelpText {
+                color: var(--content-disabled);
+            }
+        }
+
+        &[data-error='true'] {
+            .groupTitle {
+                color: var(--content-danger);
+            }
         }
 
     }
@@ -37,5 +72,10 @@
         padding: $positive-spacing_0;
         align-items: flex-start;
         gap: $positive-spacing_300;
+
+        &[data-direction='vertical'] {
+            flex-direction: column;
+            gap: $positive-spacing_100;
+        }
     }
 }
