fix: update condition from isInteractive to isDisplayed in RadioButton components for consistency

--- a/packages/angular/src/components/radio-button-group/radio-button-group.component.html
+++ b/packages/angular/src/components/radio-button-group/radio-button-group.component.html
@@ -1,5 +1,5 @@
 <div  
-    *ngIf="isInteractive()"
+    *ngIf="isDisplayed()"
     class="radio-button-group-container">
     <div
         class="radio-button-group-header"
