--- a/packages/angular/src/components/radio-button/radio-button.component.html
+++ b/packages/angular/src/components/radio-button/radio-button.component.html
@@ -1,4 +1,4 @@
-    <div *ngIf="isInteractive()" class="rte-radio-button-container">
+    <div *ngIf="isDisplayed()" class="rte-radio-button-container">
         <input
             type="radio"
             [id]="label()"
